--- a/styles/infoPara.module.css
+++ b/styles/infoPara.module.css
@@ -1,9 +1,11 @@
 .container {
+  display: flex;
   color: white;
   background-color: rgba(70, 70, 70, 0.3);
   margin-top: 20px;
   margin-right: 10%;
   margin-left: 5%;
+  width: 40%;
   border: 1px solid #f6ff8e;
   border-radius: 30px;
   padding: 20px;
