--- a/styles/bio.module.css
+++ b/styles/bio.module.css
@@ -1,15 +1,16 @@
 .container {
   display: flex;
   color: white;
-  background-color: rgba(70, 70, 70, 0.3);
-  margin-top: 20px;
-  margin-right: 10%;
-  margin-left: 5%;
+  background-color: rgba(70, 70, 70, 0.2);
+  /* margin-right: 10%; */
+  margin-left: auto;
+  margin-right: 150px;
+  margin-top: -200px;
   width: 40%;
-  border: 1px solid #f6ff8e;
   border-radius: 30px;
-  padding: 20px;
+  padding: 15px;
   line-height: 2;
+  border: none;
 }
 
 .title {
