--- a/styles/bio.module.css
+++ b/styles/bio.module.css
@@ -5,7 +5,7 @@
   /* margin-right: 10%; */
   margin-left: auto;
   margin-right: 150px;
-  margin-top: -200px;
+  margin-top: -80px;
   width: 40%;
   border-radius: 30px;
   padding: 15px;
@@ -20,4 +20,10 @@
   margin-left: 50%;
   position: absolute; /* Added position absolute */
   top: 0;
+}
+.eduHighlight {
+  color: rgba(40, 124, 72, 0.466);
+}
+.devHighlight {
+  color: rgba(255, 236, 128, 0.995);
 }
