--- a/styles/bio.module.css
+++ b/styles/bio.module.css
@@ -3,9 +3,10 @@
   color: white;
   background-color: rgba(70, 70, 70, 0.2);
   /* margin-right: 10%; */
-  margin-left: auto;
-  margin-right: 230px;
-  margin-top: 50px;
+  margin-left: 15%;
+  margin-right: 20%;
+  margin-top: 15%;
+  margin: auto;
   width: 40%;
   border-radius: 30px;
   padding: 15px;
