index/added video component

--- a/styles/bio.module.css
+++ b/styles/bio.module.css
@@ -4,8 +4,8 @@
   background-color: rgba(24, 24, 24, 0.675);
   margin-top: 15%;
   margin-bottom: 15%;
-  margin: auto;
-  width: 25%;
+  margin-right: 10%;
+  width: 30%;
   border-radius: 30px;
   padding: 15px;
   line-height: 2;
