--- a/styles/bio.module.css
+++ b/styles/bio.module.css
@@ -2,14 +2,14 @@
   display: flex;
   color: white;
   background-color: rgba(24, 24, 24, 0.675);
-  margin-top: 15%;
-  margin-bottom: 15%;
-  margin-right: 10%;
-  width: 30%;
-  border-radius: 30px;
+  margin: auto;
+  width: 35%;
+  border-radius: 15px;
   padding: 15px;
   line-height: 2;
   border: none;
+  font-size: 12pt;
+  font-weight: 100;
 }
 
 .title {
@@ -17,7 +17,7 @@
   margin-top: 40px;
   margin-right: 5%;
   margin-left: 50%;
-  position: absolute; /* Added position absolute */
+  position: absolute;
   top: 0;
 }
 
@@ -27,4 +27,30 @@
 
 .yearHL {
   font-size: larger;
+}
+.toggButt {
+  font-family: "Montserrat", sans-serif;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: rgba(255, 27, 251, 0.575);
+  color: white;
+  height: 70px;
+  width: 103px;
+  padding: 30px;
+  border-radius: 22px;
+  margin-right: -5%;
+  margin-left: auto;
+  font-size: large;
+  border: none;
+  font-weight: 400;
+}
+.press {
+  transition: transform 0.3s ease;
+}
+
+.press:hover {
+  transform: translateY(-5px);
+  background-color: rgba(149, 146, 146, 0.467);
 }
