--- a/styles/bio.module.css
+++ b/styles/bio.module.css
@@ -43,7 +43,7 @@
   border-radius: 22px;
   margin-right: -5%;
   margin-left: auto;
-  font-size: large;
+  font-size: 10pt;
   border: none;
   font-weight: 400;
 }
