--- a/styles/bio.module.css
+++ b/styles/bio.module.css
@@ -3,7 +3,7 @@
   color: white;
   background-color: rgba(24, 24, 24, 0.675);
   margin: auto;
-  width: 35%;
+  width: auto;
   border-radius: 15px;
   padding: 15px;
   line-height: 2;
@@ -32,6 +32,7 @@
 .toggButt {
   font-family: "Montserrat", sans-serif;
   justify-content: center;
+  position: fixed;
   text-align: center;
   align-items: center;
   flex-direction: column;
@@ -42,7 +43,7 @@
   padding: 30px;
   border-radius: 22px;
   margin-right: -5%;
-  margin-left: auto;
+  margin-left: 40%;
   font-size: 10pt;
   border: none;
   font-weight: 400;
