--- a/styles/bio.module.css
+++ b/styles/bio.module.css
@@ -36,14 +36,16 @@
   text-align: center;
   align-items: center;
   flex-direction: column;
-  background-color: rgba(255, 27, 251, 0.575);
+  background-color: rgba(178, 178, 178, 0.467);
   color: white;
   height: 70px;
   width: 103px;
   padding: 30px;
   border-radius: 22px;
-  margin-right: -5%;
-  margin-left: 40%;
+  margin-right: auto;
+  margin-left: 63%;
+  margin-top: 42%;
+  margin-bottom: auto;
   font-size: 10pt;
   border: none;
   font-weight: 400;
@@ -54,5 +56,5 @@
 
 .press:hover {
   transform: translateY(-5px);
-  background-color: rgba(149, 146, 146, 0.467);
+  background-color: rgba(254, 242, 105, 0.467);
 }
