--- a/styles/bio.module.css
+++ b/styles/bio.module.css
@@ -36,7 +36,7 @@
   text-align: center;
   align-items: center;
   flex-direction: column;
-  background-color: rgba(178, 178, 178, 0.467);
+  background-color: rgba(245, 49, 255, 0.34);
   color: white;
   height: 70px;
   width: 103px;
@@ -49,6 +49,7 @@
   font-size: 10pt;
   border: none;
   font-weight: 400;
+  line-height: 1.5;
 }
 .press {
   transition: transform 0.3s ease;
