--- a/styles/bio.module.css
+++ b/styles/bio.module.css
@@ -76,9 +76,9 @@
   }
 
   .toggButt {
-    margin: 20px auto;
-    margin-top: 30px;
-    margin-bottom: auto;
+    position: relative;
+    margin-left: 10px;
+    margin-top: 20px;
     width: 80px;
     height: 60px;
     padding: 20px;
