--- a/styles/bio.module.css
+++ b/styles/bio.module.css
@@ -62,8 +62,10 @@
 
 @media (max-width: 490px) {
   .container {
-    width: 100%;
     margin: 0;
+    width: 100vw;
+    margin-top: 20px;
+    border-radius: 0%;
     padding: 10px;
     font-size: 8pt;
   }
