--- a/styles/bio.module.css
+++ b/styles/bio.module.css
@@ -4,7 +4,9 @@
   margin: auto;
   width: auto;
   border-radius: 15px;
-  padding: 15px;
+  padding: 30px;
+  padding-left: 20px;
+  padding-right: 40px;
   line-height: 2;
   border: none;
   font-size: 10pt;
