--- a/styles/bio.module.css
+++ b/styles/bio.module.css
@@ -16,7 +16,7 @@
 }
 
 .title {
-  color: #f866c5;
+  color: #6fcafbd4;
   margin-top: 40px;
   margin-right: 5%;
   margin-left: 50%;
@@ -38,16 +38,15 @@
   text-align: center;
   align-items: center;
   flex-direction: column;
-  background-color: rgba(245, 49, 255, 0.34);
+  background-color: #6fcafbd4;
   color: white;
   height: 70px;
-  width: 103px;
-  padding: 30px;
+  width: 10%;
+  padding: 20px;
   border-radius: 22px;
   margin-right: auto;
-  margin-left: 63%;
-  margin-top: 42%;
-  margin-bottom: auto;
+  margin-left: 35vw;
+  margin-bottom: 10px;
   font-size: 10pt;
   border: none;
   font-weight: 400;
