--- a/styles/bio.module.css
+++ b/styles/bio.module.css
@@ -3,6 +3,8 @@
   background-color: rgba(24, 24, 24, 0.6);
   margin: auto;
   width: auto;
+  height: auto;
+  max-height: 95vh;
   border-radius: 15px;
   padding: 30px;
   padding-left: 20px;
@@ -12,7 +14,7 @@
   font-size: 10pt;
   font-weight: 400;
   color: rgba(231, 231, 231, 0.742);
-  overflow: visible;
+  overflow-y: auto;
 }
 
 .title {
