bio/ re structure and content update

--- a/styles/bio.module.css
+++ b/styles/bio.module.css
@@ -9,6 +9,7 @@
   padding: 30px;
   padding-left: 20px;
   padding-right: 40px;
+  padding-bottom: 40px;
   line-height: 2;
   border: none;
   font-size: 10pt;
