--- a/styles/bio.module.css
+++ b/styles/bio.module.css
@@ -34,7 +34,7 @@
   font-size: larger;
 }
 .toggButt {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Russo", sans-serif;
   justify-content: center;
   position: fixed;
   text-align: center;
